# Ejemplo-Red-Neuronal

./: .gitignore  CMakeLists.txt  README.md  main.c
AlgebraLineal/: Matriz.c  Matriz.h  OperacionesMatrices.c  OperacionesMatrices.h
RedNeuronal/: Activaciones.c  Activaciones.h  Redes.c  Redes.h
red_prueba/: oculto  salida
util/: Imagen.c  Imagen.h
